# CSC211H_Project

./: .gitignore  CMakeLists.txt  README.md  Score.h  csvparser.cpp  csvparser.h  index.html  ingredient.cpp  ingredient.h  main.cpp  mainwindow.cpp  mainwindow.h  skinscorer.cpp  skinscorer.h
